--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,9 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/styles/weather-icons.min.css",
+              "src/assets/styles/weather-icons-wind.min.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
