--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ng2-charts": "^6.0.1",
     "openmeteo": "^1.1.4",
     "rxjs": "~7.8.0",
+    "swiper": "^11.1.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
